--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <div class="title"><h2>About</h2></div>
               <div class="about-content">
                 <div class="left">
-                    <img src="/assets/images/mypic2.png" alt="">
+                    <img src="assets/images/mypic2.png" alt="">
                 </div>
                 <div class="right">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero alias tempore ipsum nostrum deleniti fugit, officiis perferendis adipisci velit itaque vero atque optio, in debitis reiciendis totam harum dolores quibusdam quis rerum et. Veniam expedita vel ipsa minus aperiam dolorem earum ullam numquam repudiandae architecto pariatur soluta, odio asperiores ex magnam temporibus. Molestias nesciunt explicabo, natus quam voluptatum perspiciatis et magni. Unde quae consequuntur quidem aliquam dolorem omnis error, eos, aliquid nemo numquam quod earum maxime, sit in voluptate esse. Esse voluptatum non sapiente, ullam quia, ipsa doloribus facere obcaecati blanditiis nam veniam repellendus a inventore atque beatae dicta fugit.
